# HoG

./: .gitignore  CMakeLists.txt  makefile  plot.sh
apsphog/: CMakeLists.txt
apsphog/include/: Hog.h  HogNode.h  SSPDefine.h
apsphog/src/: Hog.cpp
include/: Aho-Cora.h  Aho-Corax.h  DatasetGenerator.h  EHOG.h  EHOGx.h  HOG-BASE.h  HOG-BCER.h  HOG-EC.h  HOG-SK.h  HOG-SKx.h  HOG-SP.h  HOG-SSP.h  timer.h  trace.h
plots/: SK  SSP  plot.sh  random_fixed_k_BCER  random_fixed_k_EC  random_fixed_k_SK  random_fixed_k_SSP  random_fixed_n_BCER  random_fixed_n_EC  random_fixed_n_SK  random_fixed_n_SSP  random_sk_fixed_n  random_sk_fixed_p  random_ssp_fixed_n  random_ssp_fixed_p  reads_sk_fixed_n  reads_sk_fixed_p  reads_ssp_fixed_n  reads_ssp_fixed_p  real  real_sk  real_ssp
profiling/: callgrind.out.221  gmon.out  gprof_out  massif.out.2032  massif.out.3864  massif.out.563  massif.out.660
scripts/: build.sh  plot_aho_ehog_n  plot_aho_k  plot_aho_n  plot_ehog_k  plot_ehog_n  plot_fixed_k  plot_fixed_k_mem  plot_fixed_k_time  plot_fixed_n  plot_fixed_n_mem  plot_fixed_n_time  plot_read_random_M  plot_read_random_M_aho  plot_read_random_M_ehog  plot_read_random_M_mem  plot_wrt_ehog_k  plot_wrt_ehog_n  run.sh  script.sh  script_combined.sh  script_old.sh  test.sh  test_random.sh  test_read_random.sh
src/: Aho-Cora.cpp  Aho-Corax.cpp  DatasetGenerator.cpp  EHOG.cpp  EHOGx.cpp  HOG-BASE.cpp  HOG-BCER.cpp  HOG-EC.cpp  HOG-SK.cpp  HOG-SKx.cpp  HOG-SP.cpp  HOG-SSP.cpp  timer.cpp
tests/: testAho-Cora.cpp  testHOG.cpp  testQueries.cpp  testQueriesKMP.cpp  validateHOG.cpp
